# wecom-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
docs/: cli-reference.md
skills/wecomcli-doc/: SKILL.md
skills/wecomcli-doc/references/: smartpage-create.md
src/: browser.rs  config.rs  constants.rs  fs_util.rs  help.rs  json_rpc.rs  logging.rs  main.rs  paths.rs  registry.rs
src/auth/: bot.rs  mod.rs  protocol.rs  qrcode.rs
src/cmd/: auth.rs  cache.rs  call.rs  init.rs  mod.rs
src/crypto/: cipher.rs  keystore.rs  mod.rs
src/fs_util/: mod.rs  sanitize_filename.rs
src/helpers/: AGENTS.md  HUMANS.md  mod.rs  registry.rs
src/helpers/doc/: mod.rs  smartpage_create.rs
src/mcp/: config.rs  error.rs  mod.rs
src/media/: mod.rs  utils.rs
src/service/: categories.rs  command.rs  handler.rs  mod.rs
